--- a/robospice-sample-ui-spicelist/res/layout/view_cell_tweet.xml
+++ b/robospice-sample-ui-spicelist/res/layout/view_cell_tweet.xml
@@ -11,6 +11,7 @@
         android:scaleType="fitXY"
         android:layout_marginRight="7dp"
         android:layout_centerVertical="true"
+        android:contentDescription="@string/content_picture"
         android:src="@android:drawable/picture_frame" />
 
     <TextView
