Solved some rotation bugs.

--- a/robospice-sample-spring-android/res/layout/main.xml
+++ b/robospice-sample-spring-android/res/layout/main.xml
@@ -15,7 +15,9 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="@string/search_hint_text" />
+            android:hint="@string/search_hint_text"
+            android:inputType="textNoSuggestions"
+            android:singleLine="true" />
 
         <Button
             android:id="@+id/search_button"
