Solved focus bug

--- a/robospice-sample-spring-android/res/layout/main.xml
+++ b/robospice-sample-spring-android/res/layout/main.xml
@@ -5,8 +5,11 @@
     android:orientation="vertical" >
 
     <LinearLayout
+        android:id="@+id/search_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true"
         android:orientation="horizontal"
         android:padding="2dip" >
 
