Improve core sample

--- a/robospice-sample-core/res/layout/main.xml
+++ b/robospice-sample-core/res/layout/main.xml
@@ -17,10 +17,11 @@
             android:singleLine="true"
             android:text="@string/textview_text" />
 
-        <TextView
+        <ImageView
             android:id="@+id/textview_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:scaleType="center"
             android:text="@string/textview_image" />
 
     </LinearLayout>
