--- a/robospice-sample-ui-spicelist/res/layout/activity_githublist.xml
+++ b/robospice-sample-ui-spicelist/res/layout/activity_githublist.xml
@@ -29,7 +29,7 @@
     </LinearLayout>
 
     <com.octo.android.robospice.spicelist.SpiceListView
-        android:id="@+id/listview_octos"
+        android:id="@+id/listview_github"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:visibility="gone" />
